Bug 420066 - Importing Wireguard Config fails when IPv6 DNS is specified
Summary: Importing Wireguard Config fails when IPv6 DNS is specified
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Manjaro Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-14 08:16 UTC by MatFi
Modified: 2024-12-23 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
wg conf file to reproduce the error (341 bytes, text/plain)
2020-04-14 08:16 UTC, MatFi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description MatFi 2020-04-14 08:16:20 UTC
Created attachment 127531 [details]
wg conf file to reproduce the error

SUMMARY
It's not possible to import wireguard configurations via the dialog when a IPv6 DNS resolver is set in the wg.conf. 
Removing the IPv6 address from the DNS settings import works but does not add the PresharedKey to the configuration

STEPS TO REPRODUCE
Import the following wireguard config:
$ cat wg1.conf
[Interface]
Address = 10.0.0.3/32, 2a01:4f7:1::3/128
PrivateKey = YCRTq3DO0Po2lXfZhyfVMgqF1uvez/Sk07hv4oXfF0s=
DNS = 2a01:4f8:0:1::add:1010, 213.133.98.98

[Peer]
PublicKey = NHYr6WEXzJSC7frUasiKGaPdoEZ1wA+v9F1gDOJu9EA=
PresharedKey = onepresharedkeyjusttohaveitwrittenthereasex=
AllowedIPs = 0.0.0.0/0, ::/0
Endpoint = wg.somehost.de:51820


OBSERVED RESULT
throws: "ipv6.method: method "auto" is not supported for WireGuard" 

EXPECTED RESULT
A new wireguard vpn connection added to the list

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
kernel: 5.6.3-2-MANJARO
Comment 1 soshial 2023-04-06 20:15:51 UTC
I have got the same problem on latest Manjaro as of 2023. Is there any solution for this? I can add all values from *.conf files manually, but that takes enormous amount of time.
Comment 2 Bug Janitor Service 2023-04-12 16:23:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/242
Comment 3 Nicolas Fella 2023-04-29 14:46:07 UTC
Git commit 70e3d1e8a7ac87b23f313833985fd8d5e40ff885 by Nicolas Fella.
Committed on 29/04/2023 at 14:43.
Pushed by nicolasfella into branch 'master'.

Use nm_conn_wireguard_import to import WireGuard files

This is more robust than our hand-rolled implementation
Related: bug 468365, bug 452952, bug 423973, bug 427222

M  +12   -0    kcm/kcm.cpp

https://invent.kde.org/plasma/plasma-nm/commit/70e3d1e8a7ac87b23f313833985fd8d5e40ff885
Comment 4 Nicolas Fella 2023-04-29 14:46:43 UTC
Git commit 0237be91fd8a714efa3ef9d88c7ac157fcff488b by Nicolas Fella.
Committed on 29/04/2023 at 14:46.
Pushed by nicolasfella into branch 'Plasma/5.27'.

Use nm_conn_wireguard_import to import WireGuard files

This is more robust than our hand-rolled implementation
Related: bug 468365, bug 452952, bug 423973, bug 427222
(cherry picked from commit 70e3d1e8a7ac87b23f313833985fd8d5e40ff885)

M  +12   -0    kcm/kcm.cpp

https://invent.kde.org/plasma/plasma-nm/commit/0237be91fd8a714efa3ef9d88c7ac157fcff488b
Comment 5 Ben Cooksley 2024-12-23 18:23:43 UTC
Bulk transfer as requested in T17796