Use nm_conn_wireguard_import to import WireGuard files

This is more robust than our hand-rolled implementation

BUG: 420066

BUG: 468365

BUG: 452952

BUG: 423973

BUG: 427222